--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,1 @@
-sutvarkyti duomenu bazes
-sutvarkyti seedus
-prideti favorit mygtuka homei (jei prisijunges)
-sutvarkyti teksta ant paveiksliuko
+userio bladeas
