search finished, advanced search started

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,6 +5,8 @@ searchas sone
 searchas pagal tagus
 searchas pagal title
 searchas pagal useri
+searchas pagal kategorija - (sukurti kategoriju lentele)
+iskleidziamas advanced searchas ?
 kategorijos sone
 paspaudus ant paveiksliuko nukreipimas i isdidinta paveiksliuka
 bannerio mygtukas tik prisiloginus
