advanced search complete & pagination & gradient

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,15 @@
 home.blade.php
 ---------------------------------------------------------------
 searchas virsuj +
-searchas sone
-searchas pagal tagus
-searchas pagal title
-searchas pagal useri
-searchas pagal kategorija - (sukurti kategoriju lentele)
+searchas sone +
+searchas pagal tagus +
+searchas pagal title +
+searchas pagal useri +
+searchas pagal kategorija - (sukurti kategoriju lentele) +
 iskleidziamas advanced searchas +
-gradiento scriptas
+paginationo stilius +
+
+gradiento scriptas +
 kategorijos sone
 paspaudus ant paveiksliuko nukreipimas i isdidinta paveiksliuka
 bannerio mygtukas tik prisiloginus
