--- a/TODO.txt
+++ b/TODO.txt
@@ -25,3 +25,7 @@ perziuros metodas - slideris
 collapse iconai
 favorit animacija
 ---------------------------------------------------------------
+show.blade.php
+---------------------------------------------------------------
+updated at ajax
+---------------------------------------------------------------
